# databot-mvp

./: .env.example  docker-compose.yml
backend/: .gitignore  Cargo.toml
backend/migrations/: 20251126152215_create_core_tables.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/domain/: conversation.rs
